[package]
name = "peaceful"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "2.0.14"
clap = { version = "4.5.2", features = ["derive"] }
glob = "0.3.1"
image = "0.25.0"
indicatif = { version = "0.17.8", features = ["rayon"] }
lazy_static = "1.4.0"
num_cpus = "1.16.0"
rayon = "1.9.0"
tempfile = "3.10.1"
